--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
  <header>
   <nav class="navbar">
    <img src="./IMG/679df5c631f64146a8035c959fbc986c.png" class="logo" alt="Johy - Software Development">
-   <section class="ul-header">
-    <ul>
-     <li>Inicio</li>
-     <li>Servicios</li>
-     <li>Clientes</li>
-     <li>Contacto</li>
-    </ul>
-   </section>
+   <ul class="ul-header">
+    <li>Inicio</li>
+    <li>Servicios</li>
+    <li>Clientes</li>
+    <li>Contacto</li>
+   </ul>
   </nav>
  </header>
 </body>
