--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <nav class="navbar">
    <img src="./IMG/679df5c631f64146a8035c959fbc986c.png" class="logo" alt="Johy - Software Development">
    <ul class="ul-header">
-    <li>Inicio</li>
-    <li>Servicios</li>
-    <li>Clientes</li>
-    <li>Contacto</li>
+    <li><a href="#">Inicio</a></li>
+    <li><a href="#">Servicios</a></li>
+    <li><a href="#">Clientes</a></li>
+    <li><a href="#">Contacto</a></li>
    </ul>
   </nav>
  </header>
