--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
  <header>
   <nav class="navbar">
-   <img src="./IMG/679df5c631f64146a8035c959fbc986c.png" class="logo" alt="Johy - Software Development">
+   <img src="./IMG/logo2.png" class="logo" alt="Johy - Software Development">
    <ul class="ul-header">
     <li><a href="#">Inicio</a></li>
     <li><a href="#">Servicios</a></li>
