--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
    </ul>
   </nav>
  </header>
+ <main>
+  <section id="hero">
+   <div class="hero-content">
+    <h1>Johy Software Development</h1>
+    <p>Nos dedicamos a crear software de acuerdo a las necesidades de nuestros Clientes</p>
+    <div class="buttons">
+     <button class="b1">CONTACTO</button>
+     <button class="b2">MAS INFO</button>
+    </div>
+   </div>
+   <img src="./IMG/undraw_programmer_re_owql.svg" alt="Programadora">
+
+  </section>
+  <section class="description">
+   <p>En nuestra empresa tratamos de superar las espectativas de nuestros clientes, somos apasionados por nuestro
+    trabajo, y desarrollamos software de calidad.</p>
+  </section>
+ </main>
 </body>
 
 </html>
