--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="./style.css">
+ <link rel="stylesheet" href="./mobile.css">
  <title>Johy - Software Development</title>
 </head>
 
@@ -13,12 +14,24 @@
  <header>
   <nav class="navbar">
    <img src="./IMG/logo2.png" class="logo" alt="Johy - Software Development">
-   <ul class="ul-header">
+
+   <label for="menu-toggle">
+    <div class="menu-button">
+     <span></span>
+     <span></span>
+     <span></span>
+    </div>
+   </label>
+   <input type="checkbox" id="menu-toggle" class="menu-toggle">
+
+   <ul class="ul-header toggle">
     <li><a href="#">Inicio</a></li>
     <li><a href="#">Servicios</a></li>
     <li><a href="#">Clientes</a></li>
     <li><a href="#">Contacto</a></li>
    </ul>
+
+
   </nav>
  </header>
  <main>
