--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
  <header>
   <nav class="navbar">
    <img src="./IMG/logo2.png" class="logo" alt="Johy - Software Development">
+   <div class="menu-d">
+    <label for="menu-toggle">
+     <div class="menu-button">
+      <span></span>
+      <span></span>
+      <span></span>
+     </div>
+    </label>
+    <input type="checkbox" id="menu-toggle" class="menu-toggle">
 
-   <label for="menu-toggle">
-    <div class="menu-button">
-     <span></span>
-     <span></span>
-     <span></span>
-    </div>
-   </label>
-   <input type="checkbox" id="menu-toggle" class="menu-toggle">
-
-   <ul class="ul-header toggle">
-    <li><a href="#">Inicio</a></li>
-    <li><a href="#">Servicios</a></li>
-    <li><a href="#">Clientes</a></li>
-    <li><a href="#">Contacto</a></li>
-   </ul>
-
+    <ul class="ul-header toggle">
+     <li><a href="#">Inicio</a></li>
+     <li><a href="#">Servicios</a></li>
+     <li><a href="#">Clientes</a></li>
+     <li><a href="#">Contacto</a></li>
+    </ul>
+   </div>
 
   </nav>
  </header>
