mobile todo en column

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
      <button class="b2">MAS INFO</button>
     </div>
    </div>
-   <img src="./IMG/undraw_programmer_re_owql.svg" alt="Programadora">
+   <img class="imagen" src="./IMG/undraw_programmer_re_owql.svg" alt="Programadora">
 
   </section>
   <section class="description">
