--- a/index.html
+++ b/index.html
@@ -51,7 +51,60 @@
    <p>En nuestra empresa tratamos de superar las espectativas de nuestros clientes, somos apasionados por nuestro
     trabajo, y desarrollamos software de calidad.</p>
   </section>
+  <section class="ventajas">
+   <div class="nosotros">
+    <h3>Ventajas de trabajar con nosotros</h3>
+    <br>
+    <p>Contratar nuestra empresa de software tiene varias ventajas para la creación de tu página web</p>
+   </div>
+   <div class="align-cards">
+    <div class="experiencia cards">
+     <img class="img-v" src="./IMG/brain.png" alt="experiencia">
+     <h4>Experiencia y conocimiento técnico</h4>
+     <p>Esta empresa de software cuenta con profesionales altamente capacitados y con
+      experiencia en el desarrollo de páginas web. Esto garantiza que el trabajo será realizado de manera eficiente y de
+      acuerdo a las mejores prácticas del mercado.</p>
+    </div>
+    <div class="personalizacion cards">
+     <img class="img-v" src="./IMG/personalizacion.png" alt="personalizacion">
+     <h4>Mayor capacidad de personalización</h4>
+     <p>Esta empresa de software puede ofrecer una mayor capacidad de personalización en el diseño y desarrollo de la
+      página web,
+      lo que significa que pueden crear una solución que se ajuste a las necesidades específicas de tu negocio.</p>
+    </div>
+    <div class="soporte cards">
+     <img class="img-v" src="./IMG/support.png" alt="soporte">
+     <h4>Soporte técnico</h4>
+     <p>Esta empresa de software ofrece soporte técnico para resolver cualquier problema que pueda surgir con la página
+      web. Esto puede ser muy útil, especialmente si no tienes conocimientos técnicos o no cuentas con un equipo interno
+      para
+      hacer frente a problemas técnicos.</p>
+    </div>
+   </div>
+  </section>
+  <section class="contacto" id="contacto">
+   <div class="tel-mail">
+    <h4>Contacto</h4>
+    <div class="icon-row">
+     <img class="img-cont" src="./IMG/phone.png" alt="telefono">
+     <span>(011) 2399-8649</span>
+    </div>
+    <div class="icon-row">
+     <img class="img-cont" src="./IMG/mail.png" alt="mail">
+     <span>johy.east@gmail.com</span>
+    </div>
+   </div>
+   <div class="mapa">
+    <iframe
+     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.966858882865!2d-58.46913308542343!3d-34.63027778045264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb989a6cf453%3A0x64a775156c3e5b7b!2sSede%20Comunal%207!5e0!3m2!1ses-419!2sar!4v1673101027963!5m2!1ses-419!2sar"
+     width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+     referrerpolicy="no-referrer-when-downgrade"></iframe>
+   </div>
+  </section>
  </main>
+ <footer>
+  <p>Coded by: Johanna Eastman</p>
+ </footer>
 </body>
 
 </html>
