tarjetas de contacto

--- a/index.html
+++ b/index.html
@@ -82,23 +82,44 @@
     </div>
    </div>
   </section>
-  <section class="contacto" id="contacto">
-   <div class="tel-mail">
-    <h4>Contacto</h4>
-    <div class="icon-row">
-     <img class="img-cont" src="./IMG/phone.png" alt="telefono">
-     <span>(011) 2399-8649</span>
+
+
+  <section id="contacto">
+   <h2>Contáctenos</h2>
+   <div class="contacto">
+    <div class="contacts">
+     <div class="tel-mail">
+      <h4>Johanna Eastman</h4>
+      <div class="icon-row">
+       <img class="img-cont" src="./IMG/phone.png" alt="telefono">
+       <span>(011) 2399-8649</span>
+      </div>
+      <div class="icon-row">
+       <img class="img-cont" src="./IMG/mail.png" alt="mail">
+       <span>johy.east@gmail.com</span>
+      </div>
+     </div>
+     <div class="tel-mail">
+      <h4>Agustín Barrio</h4>
+      <div class="icon-row">
+       <img class="img-cont" src="./IMG/phone.png" alt="telefono">
+       <span>(011) 2390-8912</span>
+      </div>
+      <div class="icon-row">
+       <img class="img-cont" src="./IMG/mail.png" alt="mail">
+       <span>
+        agus.barrio@gmail.com
+       </span>
+      </div>
+     </div>
     </div>
-    <div class="icon-row">
-     <img class="img-cont" src="./IMG/mail.png" alt="mail">
-     <span>johy.east@gmail.com</span>
+
+    <div class="mapa">
+     <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.966858882865!2d-58.46913308542343!3d-34.63027778045264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb989a6cf453%3A0x64a775156c3e5b7b!2sSede%20Comunal%207!5e0!3m2!1ses-419!2sar!4v1673101027963!5m2!1ses-419!2sar"
+      width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-   </div>
-   <div class="mapa">
-    <iframe
-     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.966858882865!2d-58.46913308542343!3d-34.63027778045264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb989a6cf453%3A0x64a775156c3e5b7b!2sSede%20Comunal%207!5e0!3m2!1ses-419!2sar!4v1673101027963!5m2!1ses-419!2sar"
-     width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-     referrerpolicy="no-referrer-when-downgrade"></iframe>
    </div>
   </section>
  </main>
