--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
  </header>
  <main>
   <section id="hero">
-   <div class="hero-content">
+   <div class="hero-content slide-down">
     <h1>Johy Software Development</h1>
     <p>Nos dedicamos a crear software de acuerdo a las necesidades de nuestros Clientes</p>
     <div class="buttons">
